[VARKA] Plan task 62's PR (B): the runner, which is not pinned
### What changes were proposed in this pull request?

`PLAN_TASK_62.md` gains section 11: the plan for PR (B), the workflow that runs the date surface on the three distributions and commits their files. No code. The milestone row is updated to point at it.

**The word "pinned" was doing work it cannot do, and this section replaces it.** Section 3.1 described (B) as "the workflow that runs the three distributions on a pinned runner", and it was being read as a prerequisite to provision hardware. The repository says otherwise, and the evidence is in its own committed files. Every upstream benchmark results file in this tree carries the CPU it ran on, and across the tree those are: AMD EPYC 7763 (Zen 3, no AVX-512) on about 1800 files, AMD EPYC 9V74 (Zen 4, AVX-512 double-pumped to 256 bits) on about 875, Intel Xeon Platinum 8370C (Ice Lake-SP, full 512-bit) on 64, and Intel Xeon 6973P-C and 6975P-C (Granite Rapids, full 512-bit) on 54. All four families appear in files committed on a single day from one regeneration, all on Azure runners. So GitHub's pool is heterogeneous *within one workflow run*, it does reach genuine full-width AVX-512 hardware, and the upstream project's whole approach is to record the CPU in the file header and accept what it gets.

**(B) follows that convention and adds the check the convention lacks.** This fork's `benchmark.yml` already carries an early CPU gate - the `expected-cpu` input, whose step reads `/proc/cpuinfo` and fails the job before any build when the model does not match, added alongside the `extra-java-options` input that exists for exactly this kind of vector work. (B) reuses that shape rather than inventing one, and goes a step further because "512-bit datapath" is a property and not a model name: the **datapath probe decides**. `dev/varka_canary/Canary.java` already measures it - compute rates at `-XX:MaxVectorSize=32` against `=64`, whose ratio is near 2x on a f